@@ -1,3 +1,12 @@
+2005-01-21  Michael Koch  <konqueror@gmx.de>
+
+	* javax/swing/text/DefaultEditorKit.java
+	(read): Added '\n' after each line.
+	* javax/swing/text/PlainView.java
+	(modelToView): Update metrics.
+	(drawLine): Use offsets from element.
+	(paint): Update metrics. Draw all lines.
+
 2005-01-20  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* java/awt/Checkbox.java:
